--- a/src/vnsw/agent/test/SConscript
+++ b/src/vnsw/agent/test/SConscript
@@ -136,6 +136,9 @@ if sys.platform != 'darwin':
     test_agent_route_walker = env.Program(target = 'test_agent_route_walker', source = ['test_agent_route_walker.cc'])
     env.Alias('src/vnsw/agent/test:test_agent_route_walker', test_agent_route_walker)
 
+    test_basic_scale = env.Program(target = 'test_basic_scale', source = ['test_basic_scale.cc'])
+    env.Alias('src/vnsw/agent/test:test_basic_scale', test_basic_scale)
+
 #    test_sg = env.Program(target = 'test_sg', source = ['test_sg.cc'])
 #    env.Alias('src/vnsw/agent/test:test_sg', test_sg)
 
