--- a/src/vnsw/agent/test/SConscript
+++ b/src/vnsw/agent/test/SConscript
@@ -148,8 +148,8 @@ if sys.platform != 'darwin':
     test_scale_walk = env.Program(target = 'test_scale_walk', source = ['test_scale_walk.cc'])
     env.Alias('controller/agent:test_scale_walk', test_scale_walk)
 
-    test_basic_scale = env.Program(target = 'test_basic_scale', source = ['test_basic_scale.cc'])
-    env.Alias('src/vnsw/agent/test:test_basic_scale', test_basic_scale)
+    test_multicast_headless = env.Program(target = 'test_multicast_headless', source = ['test_multicast_headless.cc'])
+    env.Alias('src/vnsw/agent/test:test_multicast_headless', test_multicast_headless)
 
 #    test_sg = env.Program(target = 'test_sg', source = ['test_sg.cc'])
 #    env.Alias('controller/agent:test_sg', test_sg)
