--- a/src/vnsw/agent/test/SConscript
+++ b/src/vnsw/agent/test/SConscript
@@ -142,6 +142,9 @@ if sys.platform != 'darwin':
     test_xmpp_hv = env.Program(target = 'test_xmpp_hv', source = ['test_xmpp_hv.cc'])
     env.Alias('controller/agent:test_xmpp_hv', test_xmpp_hv)
 
+    test_scale_walk = env.Program(target = 'test_scale_walk', source = ['test_scale_walk.cc'])
+    env.Alias('controller/agent:test_scale_walk', test_scale_walk)
+
 #    test_sg = env.Program(target = 'test_sg', source = ['test_sg.cc'])
 #    env.Alias('controller/agent:test_sg', test_sg)
 
