Initial version to support vxlan bridge in linux kernel
Change-Id: Iae4473ec0303bf5f8c7435d0763cd3dd041e8e8d

--- a/src/vnsw/agent/SConscript
+++ b/src/vnsw/agent/SConscript
@@ -292,8 +292,8 @@ for dir in subdirs:
 env.SConscript('contrail/SConscript', exports=['AgentEnv', 'BuildEnv'],
                duplicate=0)
 
-#env.SConscript('vxlan_agent/SConscript', exports=['AgentEnv', 'BuildEnv'],
-#               duplicate=0)
+env.SConscript('vxlan_agent/SConscript', exports=['AgentEnv', 'BuildEnv'],
+               duplicate=0)
 
 ##########################################################################
 # Utility functions
