--- a/src/vnsw/agent/vxlan_agent/linux/SConscript
+++ b/src/vnsw/agent/vxlan_agent/linux/SConscript
@@ -13,7 +13,7 @@ import subprocess
 Import('AgentEnv')
 env = AgentEnv.Clone()
 
-env.Prepend(LIBS = AgentEnv['CONTRAIL_LIBS'])
+#env.Prepend(LIBS = AgentEnv['CONTRAIL_LIBS'])
 
 env.GenerateBuildInfoCode(
     target='buildinfo.cc',
